drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_bd_claim_by_disk.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bd_claim_by_disk.c: In function ‘dummy’:
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bd_claim_by_disk.c:6:2: error: implicit declaration of function ‘bd_claim_by_disk’ [-Werror=implicit-function-declaration]
  bd_claim_by_disk(bdev, holder, disk);
  ^~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
